# PlantiumAI

./: .env.example  .gitignore  CLAUDE.md  README.md  lucro_rentavel.md  tabelaprecos.md
.claude/: launch.json  settings.local.json
.github/workflows/: build.yml
SistemaLegado/: .gitignore  README.md  implementation_plan.md  iniciar.bat  iniciar.sh  instalar.bat  instalar.sh  task.md  test_endpoints.py
SistemaLegado/backend/: main.py  requirements.txt
SistemaLegado/doc/: PESQUISA_DETALHADA.md
SistemaLegado/frontend/: index.html
backend/: config.py
backend/providers/: blackbox_provider.py  minimax_provider.py  ollama_provider.py
desktop/: PLANO_DESKTOP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: db.rs  deps.rs  domain.rs  irrigation.rs  lib.rs  main.rs  serial.rs  sim.rs
documentos de referencia do projeto/ArtigosCientificos/: Artigos Científicos — PlantiumAI (2025–2026).docx  Busca de Artigos Científicos PlantiumAI.docx
documentos de referencia do projeto/Documentos/: Introdução TCC — PlantiumAI.docx  Revisão de Literatura e Fundamentação Tecnológica — Projeto PlantiumAI.docx  Trabalho de Conclusão de Curso (TCC) Completo — Projeto PlantiumAI.docx
documentos de referencia do projeto/Planilhas/: Gráfico de Gantt — PlantiumAI.xlsx  PlantiumAI _custos.xlsx
firmware/esp32_plantium/: esp32_plantium.ino
web/: vercel.json
(+74 files in other folders)
